@@ -2,7 +2,8 @@ Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 5.4.24 - unreleased
-
+	Rick Widmer, Tom Collins
+	- fix off_t warnings in maildirquota.c when mysql back end is used.
 
 5.4.23 - Released 23-Sep-2007
 	Rick Widmer
